added open win command

--- a/RLWM_executor.ipynb
+++ b/RLWM_executor.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "current_response = None\n",
     "cor_resps = None\n",
     "i = 0\n",
-    "\n",
+    "win = None\n",
     "#index i needs defining\n",
     "\n",
     "#Daisy chained python functions to present stimuli, get response and  present feedback\n",
@@ -53,7 +53,7 @@
     "    actr.set_buffer_chunk('visual', chunks[0])\n",
     "    print('done')\n",
     "    print(i)\n",
-    "    \n",
+    "    actr.schedule_event_relative(0, 'get_response')\n",
     "    \n",
     "def present_feedback():\n",
     "    feedback = 'no'\n",
@@ -79,14 +79,16 @@
     "# This function builds ACT-R representations of the python functions\n",
     "\n",
     "def model_loop():\n",
-    "    \n",
+    "    global win\n",
     "    actr.add_command('present_stim', present_stim, 'presents stimulus') \n",
     "    actr.add_command('present_feedback', present_feedback, 'presents feedback')\n",
     "    actr.add_command('get_response', get_response, 'gets response')\n",
     "    \n",
     "    actr.monitor_command('output-key', 'get_response')\n",
+    "    win = actr.open_exp_window(\"test\", visible=False)\n",
+    "    actr.install_device(win)\n",
     "    actr.schedule_event_relative(0, 'present_stim' )\n",
-    "    \n",
+    "  \n",
     "\n",
     "#stims = make_random_stim_list(stims_6)   \n",
     "#I think this needs a simulator?\n",
@@ -108,52 +110,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#|Warning: Creating chunk YES with no slots |#\n",
-      "#|Warning: Creating chunk CUP with no slots |#\n",
-      "#|Warning: Creating chunk BOWL with no slots |#\n",
-      "#|Warning: Creating chunk PLATE with no slots |#\n",
-      "#|Warning: Creating chunk HAT with no slots |#\n",
-      "#|Warning: Creating chunk GLOVES with no slots |#\n",
-      "#|Warning: Creating chunk SHOES with no slots |#\n",
-      "#|Warning: Creating chunk SHIRT with no slots |#\n",
-      "#|Warning: Creating chunk JACKET with no slots |#\n",
-      "#|Warning: Creating chunk JEANS with no slots |#\n",
-      "#|Warning: Creating chunk NO with no slots |#\n",
-      "#|Warning: set-buffer-chunk called with an invalid chunk name CUP-STIMULUS |#\n",
-      "#|Warning: Creating chunk POPTART with no slots |#\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "actr.load_act_r_model('/home/theodros/RLWM_ACTR/rlwm_model1.lisp')\n",
-    "chunks=actr.define_chunks(['poptart-k', 'isa', 'stimulus', 'picture', 'Poptart'])\n"
+    "#chunks=actr.define_chunks(['poptart-k', 'isa', 'stimulus', 'picture', 'Poptart'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'POPTART-K-0'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     " actr.set_buffer_chunk('visual', chunks[0])\n",
     "    "
@@ -161,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,19 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['plate', 'cup', 'plate', 'plate', 'plate', 'cup', 'cup', 'plate', 'cup', 'plate', 'cup', 'plate', 'bowl', 'plate', 'plate', 'cup', 'cup', 'cup', 'plate', 'plate', 'plate', 'cup', 'bowl', 'cup', 'bowl', 'bowl', 'bowl', 'bowl', 'bowl', 'plate', 'bowl', 'plate', 'bowl', 'bowl', 'cup', 'plate', 'bowl', 'plate', 'plate', 'cup', 'cup', 'cup', 'bowl', 'plate', 'cup', 'bowl', 'bowl', 'plate', 'plate', 'bowl']\n",
-      "done\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "stims = make_random_stim_list(stims_3)\n",
     "print(stims)\n",
@@ -193,126 +154,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#|Warning: Creating chunk YES with no slots |#\n",
-      "#|Warning: Creating chunk CUP with no slots |#\n",
-      "#|Warning: Creating chunk BOWL with no slots |#\n",
-      "#|Warning: Creating chunk PLATE with no slots |#\n",
-      "#|Warning: Creating chunk HAT with no slots |#\n",
-      "#|Warning: Creating chunk GLOVES with no slots |#\n",
-      "#|Warning: Creating chunk SHOES with no slots |#\n",
-      "#|Warning: Creating chunk SHIRT with no slots |#\n",
-      "#|Warning: Creating chunk JACKET with no slots |#\n",
-      "#|Warning: Creating chunk JEANS with no slots |#\n",
-      "#|Warning: Creating chunk NO with no slots |#\n",
-      "#|Warning: set-buffer-chunk called with an invalid chunk name CUP-STIMULUS |#\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = actr.load_act_r_model('/home/theodros/RLWM_ACTR/rlwm_model1.lisp')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Command  present_stim  already exists for function  <function present_stim at 0x7f257ef31830>\n",
-      "Command  present_feedback  already exists for function  <function present_feedback at 0x7f257ef31290>\n",
-      "Command  get_response  already exists for function  <function get_response at 0x7f257ef31200>\n",
-      "Command \"get_response\" already on the after list for command \"output-key\".\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "model_loop()\n",
-    "#present_stim()"
+    "#model_loop()\n",
+    "present_stim()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "done\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "present_stim()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(model)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Variable                Type        Data/Info\n",
-      "---------------------------------------------\n",
-      "actr                    module      <module 'actr' from '/hom<...>odros/RLWM_ACTR/actr.py'>\n",
-      "chunks                  list        n=1\n",
-      "cor_resps               NoneType    None\n",
-      "current_response        NoneType    None\n",
-      "get_response            function    <function get_response at 0x7f257ef31200>\n",
-      "i                       int         0\n",
-      "idx                     ndarray     20: 20 elems, type `int64`, 160 bytes\n",
-      "make_random_stim_list   function    <function make_random_sti<...>m_list at 0x7f257ef313b0>\n",
-      "model                   bool        True\n",
-      "model_loop              function    <function model_loop at 0x7f257ef31170>\n",
-      "np                      module      <module 'numpy' from '/ho<...>kages/numpy/__init__.py'>\n",
-      "os                      module      <module 'os' from '/home/<...>da3/lib/python3.7/os.py'>\n",
-      "present_feedback        function    <function present_feedback at 0x7f257ef31290>\n",
-      "present_stim            function    <function present_stim at 0x7f257ef31830>\n",
-      "rnd                     module      <module 'random' from '/h<...>lib/python3.7/random.py'>\n",
-      "stims                   list        n=50\n",
-      "stims_3                 list        n=3\n",
-      "stims_3_resps           list        n=3\n",
-      "stims_6                 list        n=6\n",
-      "stims_6_resps           list        n=6\n",
-      "string                  module      <module 'string' from '/h<...>lib/python3.7/string.py'>\n",
-      "sys                     module      <module 'sys' (built-in)>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "whos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "win = actr.open_exp_window(\"test\", visible=False)\n",
+    "actr.install_device(win)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(win)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_loop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "present_stim()"
    ]
   },
   {
