--- a/RLWM_executor.ipynb
+++ b/RLWM_executor.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACT-R connection has been started.\n"
+     ]
+    }
+   ],
    "source": [
     "import random as rnd\n",
     "import numpy as np\n",
@@ -19,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +50,8 @@
     "\n",
     "def present_stim():\n",
     "    global chunks\n",
-    "    chunks = actr.define_chunks([['isa', 'stimulus', 'picture', stims[i]]])\n",
-    "    print(type(chunks))\n",
+    "    chunks = actr.define_chunks(['isa', 'stimulus', 'picture', stims[i]])\n",
+    "   \n",
     "    actr.set_buffer_chunk('visual', chunks[0])\n",
     "    \n",
     "    \n",
@@ -52,8 +60,8 @@
     "    if current_response == 'j':\n",
     "        feedback = 'yes'\n",
     "        \n",
-    "    chunks = actr.define_chunks([['isa', 'feedback', 'feedback',feedback]])\n",
-    "    actr.set_buffer_chunk('visual', chunks[0])\n",
+    "    chunks_feedback = actr.define_chunks(['isa', 'feedback', 'feedback',feedback])\n",
+    "    actr.set_buffer_chunk('visual', chunks_feedback[0])\n",
     "    actr.schedule_event_relative(1, 'present_stim')\n",
     "    \n",
     "def get_response(model, key):\n",
@@ -78,7 +86,7 @@
     "    actr.schedule_event_relative(0, 'present_stim' )\n",
     "    \n",
     "\n",
-    "#stims = make_random_stim_list(stims_6)   \n",
+    "stims = make_random_stim_list(stims_6)   \n",
     "#I think this needs a simulator?\n",
     "#def simulator():\n",
     "#actr.run(1)    \n",
@@ -89,24 +97,164 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Command  present_stim  already exists and is now being replaced by  <function present_stim at 0x7f1db175cae8>\n",
+      "Command  present_feedback  already exists and is now being replaced by  <function present_feedback at 0x7f1db175cb70>\n",
+      "Command  get_response  already exists and is now being replaced by  <function get_response at 0x7f1db175cbf8>\n",
+      "Command \"get_response\" already on the after list for command \"output-key\".\n"
+     ]
+    }
+   ],
    "source": [
     "model_loop()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#|Warning: Creating chunk YES with no slots |#\n",
+      "#|Warning: Chunks extended with slot PREPARATION during a chunk-spec definition. |#\n",
+      "#|Warning: Chunks extended with slot PROCESSOR during a chunk-spec definition. |#\n",
+      "#|Warning: Chunks extended with slot EXECUTION during a chunk-spec definition. |#\n",
+      "#|Warning: Creating chunk CUP with no slots |#\n",
+      "#|Warning: Creating chunk BOWL with no slots |#\n",
+      "#|Warning: Creating chunk PLATE with no slots |#\n",
+      "#|Warning: Creating chunk HAT with no slots |#\n",
+      "#|Warning: Creating chunk GLOVES with no slots |#\n",
+      "#|Warning: Creating chunk SHOES with no slots |#\n",
+      "#|Warning: Creating chunk SHIRT with no slots |#\n",
+      "#|Warning: Creating chunk JACKET with no slots |#\n",
+      "#|Warning: Creating chunk JEANS with no slots |#\n",
+      "#|Warning: Creating chunk NO with no slots |#\n",
+      "#|Warning: set-buffer-chunk called with an invalid chunk name CUP-STIMULUS |#\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['jacket',\n",
+       " 'shoes',\n",
+       " 'jacket',\n",
+       " 'hat',\n",
+       " 'hat',\n",
+       " 'shirt',\n",
+       " 'hat',\n",
+       " 'shirt',\n",
+       " 'shirt',\n",
+       " 'shirt',\n",
+       " 'shirt',\n",
+       " 'shoes',\n",
+       " 'hat',\n",
+       " 'jacket',\n",
+       " 'jacket',\n",
+       " 'hat',\n",
+       " 'gloves',\n",
+       " 'gloves',\n",
+       " 'shirt',\n",
+       " 'gloves',\n",
+       " 'gloves',\n",
+       " 'jeans',\n",
+       " 'gloves',\n",
+       " 'jeans',\n",
+       " 'gloves',\n",
+       " 'shoes',\n",
+       " 'jeans',\n",
+       " 'hat',\n",
+       " 'jacket',\n",
+       " 'shirt',\n",
+       " 'shoes',\n",
+       " 'jeans',\n",
+       " 'jacket',\n",
+       " 'jeans',\n",
+       " 'shirt',\n",
+       " 'gloves',\n",
+       " 'jeans',\n",
+       " 'jacket',\n",
+       " 'shirt',\n",
+       " 'jeans',\n",
+       " 'hat',\n",
+       " 'jeans',\n",
+       " 'shirt',\n",
+       " 'shoes',\n",
+       " 'shirt',\n",
+       " 'jacket',\n",
+       " 'jeans',\n",
+       " 'jacket',\n",
+       " 'jacket',\n",
+       " 'gloves']"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "actr.load_act_r_model('~/RLWM_ACTR/rlwm_model1.lisp')\n",
-    "chunks=actr.define_chunks([['poptart-k', 'isa', 'stimulus', 'picture', 'Poptart']])\n"
+    "\n",
+    "stims\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "i"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['STIMULUS0']"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chunks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
