--- a/RLWM_executor.ipynb
+++ b/RLWM_executor.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = actr.load_act_r_model('/home/master-tedward/RLWM_ACTR/rlwm_model1.lisp')\n",
+    "model = actr.load_act_r_model('/home/theodros/RLWM_ACTR/rlwm_model1.lisp')\n",
     "\n",
     "\n",
     "#present feedback\n",
@@ -70,7 +70,7 @@
     "def get_response(): #(model, key):\n",
     "    global current_response\n",
     "    global i\n",
-    "    #current_response = key\n",
+    "    current_response = key\n",
     "    actr.schedule_event_relative(0, 'present_feedback')\n",
     "    i = i + 1\n",
     "\n",
@@ -86,13 +86,13 @@
     "    actr.add_command('get_response', get_response, 'gets response')\n",
     "    \n",
     "    #open window for interaction\n",
-    "    win = actr.open_exp_window(\"test\", visible=True)\n",
+    "    win = actr.open_exp_window(\"test\", visible=False)\n",
     "    actr.install_device(win)\n",
     "    actr.schedule_event_relative(0, 'present_stim' )\n",
     "    \n",
     "    #waits for a key press?\n",
-    "    actr.monitor_command('output-key', 'get_response')\n",
-    "    \n",
+    "    actr.monitor_command(\"output-key\", 'get_response')\n",
+    "    actr.run(1)\n",
     "    \n",
     "\n",
     "#stims = make_random_stim_list(stims_6)   \n",
@@ -119,7 +119,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "actr.run(1)"
+   ]
   },
   {
    "cell_type": "code",
@@ -133,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "print(stims)"
@@ -144,9 +148,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "actr.mp_show_queue()"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -169,7 +171,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#event incrementation??"
+   ]
   }
  ],
  "metadata": {
@@ -188,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
