ceres commit:memory model changes + model 1 analysis

--- a/Memory_model_interface.ipynb
+++ b/Memory_model_interface.ipynb
@@ -4,14 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Python interface"
+    "### Python interface for Model 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ACT-R connection has been started.\n"
+     ]
+    }
+   ],
    "source": [
     "import random as rnd\n",
     "import numpy as np\n",
@@ -19,19 +27,15 @@
     "import sys\n",
     "import string\n",
     "import actr\n",
-    "import pandas as pd\n",
-    "\n",
-    "\n",
-    "        "
+    "import pandas as pd\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "#Stimuli to be used and exp parameters\n",
     "stims_3 = ['cup','bowl','plate']\n",
     "stims_6 = ['hat','gloves','shoes', 'shirt', 'jacket', 'jeans']\n",
@@ -55,22 +59,56 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Python interface for Model 1"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#|Warning: Creating chunk YES with no slots |#\n",
+      "#|Warning: No production defined for (MEMORY VISUAL PICTURE CUP ==> ?RETRIEVAL> STATE FREE\n",
+      "                           +RETRIEVAL> PICTURE =CUP OUTCOME YES +IMAGINAL>\n",
+      "                           PICTURE). |#\n",
+      "#|Warning: First item on LHS is not a valid command |#\n",
+      "#|Warning: --- end of warnings for undefined production MEMORY --- |#\n",
+      "#|Warning: No production defined for (RESPONSE-MONKEY-J =RETRIEVAL STATE ERROR ==>\n",
+      "                           +MANUAL> KEY J). |#\n",
+      "#|Warning: First item on LHS is not a valid command |#\n",
+      "#|Warning: --- end of warnings for undefined production RESPONSE-MONKEY-J --- |#\n",
+      "#|Warning: No production defined for (RESPONSE-MONKEY-K =RETRIEVAL STATE ERROR ==>\n",
+      "                           +MANUAL> KEY K). |#\n",
+      "#|Warning: First item on LHS is not a valid command |#\n",
+      "#|Warning: --- end of warnings for undefined production RESPONSE-MONKEY-K --- |#\n",
+      "#|Warning: No production defined for (RESPONSE-MONKEY-L =RETRIEVAL STATE ERROR ==>\n",
+      "                           +MANUAL> KEY L). |#\n",
+      "#|Warning: First item on LHS is not a valid command |#\n",
+      "#|Warning: --- end of warnings for undefined production RESPONSE-MONKEY-L --- |#\n",
+      "#|Warning: No production defined for (YES! =RETRIEVAL OUTCOME YES KEY =K +IMAGINALS\n",
+      "                           PICTURE =CUP ?MANUAL ==> +MANUAL). |#\n",
+      "#|Warning: First item on LHS is not a valid command |#\n",
+      "#|Warning: --- end of warnings for undefined production YES! --- |#\n",
+      "#|Warning: No production defined for (ENCODE FEEDBACK =VISUALS> FEEDBACK YES OR NO\n",
+      "                           ?IMAGINAL OUTCOME NIL ==> +IMAGINAL> OUTCOME = F). |#\n",
+      "#|Warning: First item on LHS is not a valid command |#\n",
+      "#|Warning: --- end of warnings for undefined production ENCODE --- |#\n",
+      "#|Warning: Spp cannot adjust parameters because production PARSE-FEEDBACK-YES does not exist |#\n",
+      "#|Warning: Spp cannot adjust parameters because production PARSE-FEEDBACK-NO does not exist |#\n",
+      "#|Warning: Subsymbolic parameters have been set but :esc is currently nil. |#\n",
+      "     0.000   GOAL                   SET-BUFFER-CHUNK GOAL MAKE-RESPONSE NIL\n",
+      "#|Warning: Creating chunk PLATE with no slots |#\n",
+      "Presented:  plate\n",
+      "correct response:  l\n",
+      "     0.000   PROCEDURAL             CONFLICT-RESOLUTION\n",
+      "     0.000   ------                 Stopped because no events left to process\n",
+      "mean accuracy:  0.0\n"
+     ]
+    }
+   ],
    "source": [
     "#Load model\n",
-    "model = actr.load_act_r_model('/home/theodros/RLWM_ACTR/rlwm_model1.lisp')\n",
+    "model = actr.load_act_r_model('/home/theodros/RLWM_ACTR/memory_model2.lisp')\n",
     "\n",
     "\n",
     "#variables needed\n",
@@ -94,7 +132,6 @@
     "    \n",
     "    print('Presented: ', stims[i])\n",
     "    print('correct response: ', cor_resps[i])   \n",
-    "    \n",
     "def get_response(model, key):\n",
     "    global current_response\n",
     "    global i\n",
@@ -146,62 +183,19 @@
     "    actr.run(45)\n",
     "   \n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
     "model_loop()\n",
     "      \n",
     "print('mean accuracy: ', np.mean(accuracy))\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "print(current_response)\n",
-    "accuracy"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(stims)\n",
-    "cor_resps"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Response analysis\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "np.reshape(stims, (3,12), order='F').tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
